--- a/manuscripts/24-jb-dags/24-jb-experiments.tex
+++ b/manuscripts/24-jb-dags/24-jb-experiments.tex
@@ -771,13 +771,14 @@ decision to publish it.
 \phantomsection\label{refs}
 \begin{CSLReferences}{1}{0}
 \bibitem[\citeproctext]{ref-bulbulia2024swigstime}
-Bulbulia, J (2024a) Causal inference for interaction, mediation, and
+Bulbulia, J (2024a) Causal inference: Interaction, mediation, and
 time-varying treatments. \emph{PsyArXiv}.
 doi:\href{https://doi.org/10.31234/osf.io/vr268}{10.31234/osf.io/vr268}.
 
 \bibitem[\citeproctext]{ref-bulbulia2024wierd}
-Bulbulia, J (2024b) The weirdest causal inferences in the world.
-\emph{PsyArXiv}.
+Bulbulia, J (2024b) The weirdest causal inferences: Why comparative
+cultural research requires a causal understanding of measurement error
+bias. \emph{PsyArXiv}.
 doi:\href{https://doi.org/10.31234/osf.io/kj7rv}{10.31234/osf.io/kj7rv}.
 
 \bibitem[\citeproctext]{ref-cole2010}
