--- a/manuscripts/24-jb-dags/24-jb-measurement-sample-restriction.tex
+++ b/manuscripts/24-jb-dags/24-jb-measurement-sample-restriction.tex
@@ -440,8 +440,8 @@ issues. However, if the problems are causal, such methods are
 inadequate. They fail to clarify the dependencies between reality, its
 measurements, and the contextual and cultural features that modify the
 effects of reality on its measurements
-(\citeproc{ref-vanderweele2022}{VanderWeele 2022a},
-\citeproc{ref-vanderweele2022a}{2022b}).
+(\citeproc{ref-vanderweele2022}{VanderWeele 2022};
+\citeproc{ref-vanderweele2022a}{VanderWeele and Vansteelandt 2022}).
 
 I begin with a brief overview of causal inference, causal directed
 acyclic graphs (causal DAGs), and our terminology.
@@ -1751,7 +1751,7 @@ bias are open.
 Moreover, because measurements are causally related to the phenomena
 they record, investigators cannot apply statistical tests to verify
 whether measures are recorded with error
-(\citeproc{ref-vanderweele2022}{VanderWeele 2022a};
+(\citeproc{ref-vanderweele2022}{VanderWeele 2022};
 \citeproc{ref-vansteelandt2022}{Vansteelandt and Dukes 2022b}). Whether
 the phenomena that investigators hope to measure are functionally
 equivalent across cultural settings remains unknown, and can generally
@@ -2257,7 +2257,7 @@ panel studies. \emph{PsyArXiv Preprints}.
 doi:\href{https://doi.org/10.31234/osf.io/uyg3d}{10.31234/osf.io/uyg3d}.
 
 \bibitem[\citeproctext]{ref-bulbulia2024swigstime}
-Bulbulia, J (2024b) Causal inference for interaction, mediation, and
+Bulbulia, J (2024b) Causal inference: Interaction, mediation, and
 time-varying treatments. \emph{PsyArXiv}.
 doi:\href{https://doi.org/10.31234/osf.io/vr268}{10.31234/osf.io/vr268}.
 
@@ -2587,13 +2587,7 @@ and Measure. \emph{Epidemiologic Methods}, \textbf{1}(1), 55--82.
 doi:\href{https://doi.org/10.1515/2161-962X.1004}{10.1515/2161-962X.1004}.
 
 \bibitem[\citeproctext]{ref-vanderweele2022}
-VanderWeele, TJ (2022a) Constructed measures and causal inference:
-Towards a new model of measurement for psychosocial constructs.
-\emph{Epidemiology}, \textbf{33}(1), 141.
-doi:\href{https://doi.org/10.1097/EDE.0000000000001434}{10.1097/EDE.0000000000001434}.
-
-\bibitem[\citeproctext]{ref-vanderweele2022a}
-VanderWeele, TJ (2022b) Constructed measures and causal inference:
+VanderWeele, TJ (2022) Constructed measures and causal inference:
 Towards a new model of measurement for psychosocial constructs.
 \emph{Epidemiology}, \textbf{33}(1), 141.
 doi:\href{https://doi.org/10.1097/EDE.0000000000001434}{10.1097/EDE.0000000000001434}.
@@ -2610,6 +2604,12 @@ VanderWeele, TJ, and Robins, JM (2007) Four types of effect
 modification: a classification based on directed acyclic graphs.
 \emph{Epidemiology (Cambridge, Mass.)}, \textbf{18}(5), 561--568.
 doi:\href{https://doi.org/10.1097/EDE.0b013e318127181b}{10.1097/EDE.0b013e318127181b}.
+
+\bibitem[\citeproctext]{ref-vanderweele2022a}
+VanderWeele, TJ, and Vansteelandt, S (2022) A statistical test to reject
+the structural interpretation of a latent factor model. \emph{Journal of
+the Royal Statistical Society Series B: Statistical Methodology},
+\textbf{84}(5), 2032--2054.
 
 \bibitem[\citeproctext]{ref-vansteelandt2022}
 Vansteelandt, S, and Dukes, O (2022b) Assumption-lean inference for
