--- a/manuscripts/24-jb-dags/24-jb-swigs.tex
+++ b/manuscripts/24-jb-dags/24-jb-swigs.tex
@@ -188,7 +188,7 @@
 \IfFileExists{xurl.sty}{\usepackage{xurl}}{} % add URL line breaks if available
 \urlstyle{same} % disable monospaced font for URLs
 \hypersetup{
-  pdftitle={Causal Inference for Interaction, Mediation Analysis, and the Analysis of Time-Varying Treatments},
+  pdftitle={Causal Inference: Interaction, Mediation, and Time-Varying Treatments},
   pdfauthor={Joseph A. Bulbulia},
   colorlinks=true,
   linkcolor={blue},
@@ -197,8 +197,8 @@
   urlcolor={Blue},
   pdfcreator={LaTeX via pandoc}}
 
-\title{Causal Inference for Interaction, Mediation Analysis, and the
-Analysis of Time-Varying Treatments}
+\title{Causal Inference: Interaction, Mediation, and Time-Varying
+Treatments}
 
 \usepackage{academicons}
 \usepackage{xcolor}
@@ -211,7 +211,7 @@ Analysis of Time-Varying Treatments}
       
 
 
-\date{2024-06-08}
+\date{2024-06-09}
 \begin{document}
 \maketitle
 \begin{abstract}
@@ -2185,8 +2185,9 @@ Bulbulia, J (2024a) Confounding in experiments. \emph{PsyArXiv}.
 doi:\href{https://doi.org/10.31234/osf.io/6rnj5}{10.31234/osf.io/6rnj5}.
 
 \bibitem[\citeproctext]{ref-bulbulia2024wierd}
-Bulbulia, J (2024b) The weirdest causal inferences in the world.
-\emph{PsyArXiv}.
+Bulbulia, J (2024b) The weirdest causal inferences: Why comparative
+cultural research requires a causal understanding of measurement error
+bias. \emph{PsyArXiv}.
 doi:\href{https://doi.org/10.31234/osf.io/kj7rv}{10.31234/osf.io/kj7rv}.
 
 \bibitem[\citeproctext]{ref-bulbulia2023}
